# extreme-c

./: .gitignore  CMakeLists.txt  NOTE.md
ch01-essential-features/: CMakeLists.txt  ExtremeC_examples1_01.c  ExtremeC_examples1_02.c  ExtremeC_examples1_03.c  ExtremeC_examples1_04.c  ExtremeC_examples1_05.c  ExtremeC_examples1_06.c  ExtremeC_examples1_07.c  ExtremeC_examples1_08.h  ExtremeC_examples1_09.c  ExtremeC_examples1_10.c  ExtremeC_examples1_11.c  ExtremeC_examples1_12.c  ExtremeC_examples1_13.c  ExtremeC_examples1_14.c  ExtremeC_examples1_15.c  ExtremeC_examples1_16.c  ExtremeC_examples1_17.c  ExtremeC_examples1_18.c  ExtremeC_examples1_19.c  ExtremeC_examples1_20.c  ExtremeC_examples1_21.c  ExtremeC_examples1_22.c  ExtremeC_examples1_23.c  ExtremeC_examples1_24.c  ExtremeC_examples_chapter1_1.c  ExtremeC_examples_chapter1_10.c  ExtremeC_examples_chapter1_12.c  ExtremeC_examples_chapter1_13.c  ExtremeC_examples_chapter1_14.c  ExtremeC_examples_chapter1_15.c  ExtremeC_examples_chapter1_16.c  ExtremeC_examples_chapter1_17.c  ExtremeC_examples_chapter1_18.c  ExtremeC_examples_chapter1_19.c  ExtremeC_examples_chapter1_2.c  ExtremeC_examples_chapter1_20.c  ExtremeC_examples_chapter1_21.c  ExtremeC_examples_chapter1_22.c  ExtremeC_examples_chapter1_23.c  (+8 more)
ch02-compilation-and-linking/: ExtremeC_examples_chapter2_1.c  ExtremeC_examples_chapter2_1.h  ExtremeC_examples_chapter2_1_main.c  ExtremeC_examples_chapter2_2.c  ExtremeC_examples_chapter2_3.c  ExtremeC_examples_chapter2_4_main.c  ExtremeC_examples_chapter2_5_add.c  ExtremeC_examples_chapter2_5_main.c  ExtremeC_examples_chapter2_x.c  Makefile
ch03-object-files/: .gitignore  ExtremeC_examples_chapter3_2_2d.c  ExtremeC_examples_chapter3_2_3d.c  ExtremeC_examples_chapter3_2_geometry.h  ExtremeC_examples_chapter3_2_trigon.c  ExtremeC_examples_chapter3_3.c  ExtremeC_examples_chapter3_4.c
ch03-object-files/00_ELF_object_files/: Makefile
ch03-object-files/01_static_library/: Makefile
ch03-object-files/02_dynamic_library/: Makefile
ch03-object-files/03_dynamic_lazy_loading/: Makefile
ch03-object-files/dynamic/: Makefile
ch03-object-files/executable/: Makefile
ch03-object-files/lazy_loading/: Makefile
ch03-object-files/static/: Makefile
ch04-process-memory-structure/: ExtremeC_examples_chapter4_7.c  ExtremeC_examples_chapter4_8.c  Makefile
ch05-stack-and-heap/: CMakeLists.txt  ExtremeC_example5_1.c  ExtremeC_example5_2.c  ExtremeC_example5_3.c  ExtremeC_example5_4.c  ExtremeC_example5_5.c  ExtremeC_example5_6.c  Makefile
ch06-oop-and-encapsulation/: ExtremeC_examples_chapter6_21_main.cpp
