# cmake_minimum_required(VERSION 3.8)

project(Extreme-C-Programming)

# add_subdirectory(ch01-essential-features)
# add_subdirectory(ch02-compilation-and-linking)
#add_subdirectory(ch03-object-files)
# add_subdirectory(ch04-process-memory-structure)
#add_subdirectory(ch05)
add_subdirectory(ch06-oop-and-encapsulation)
# add_subdirectory(ch07-composition-and-aggregation)
#add_subdirectory(ch10)
#add_subdirectory(ch11)
#add_subdirectory(ch12)
#add_subdirectory(ch13)
#add_subdirectory(ch14)
#add_subdirectory(ch15)
#add_subdirectory(ch16)
#add_subdirectory(ch17)
# add_subdirectory(ch18-process-synchronization)
#add_subdirectory(ch19)
# add_subdirectory(ch20)
# add_subdirectory(ch21)
