set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex1_01.out
  ExtremeC_examples_chapter1_1.c
)

add_executable(ex1_02.out
  ExtremeC_examples_chapter1_2.c
)

add_executable(ex1_03.out
  ExtremeC_examples_chapter1_3.c
)

add_executable(ex1_04.out
  ExtremeC_examples_chapter1_4.c
)

add_executable(ex1_05.out
  ExtremeC_examples_chapter1_5.c
)

add_executable(ex1_06.out
  ExtremeC_examples_chapter1_6.c
)

add_executable(ex1_07.out
  ExtremeC_examples_chapter1_7.c
)

add_executable(ex1_09.out
  ExtremeC_examples_chapter1_9.c
)

add_executable(ex1_10.out
  ExtremeC_examples_chapter1_10.c
)

add_executable(ex1_11.out
  ExtremeC_examples_chapter1_11.c
)

add_executable(ex1_12.out
  ExtremeC_examples_chapter1_12.c
)

add_executable(ex1_14.out
  ExtremeC_examples_chapter1_14.c
)

add_executable(ex1_15.out
  ExtremeC_examples_chapter1_15.c
)

add_executable(ex1_16.out
  ExtremeC_examples_chapter1_16.c
)

add_executable(ex1_17.out
  ExtremeC_examples_chapter1_17.c
)

add_executable(ex1_18.out
  ExtremeC_examples_chapter1_18.c
)

add_executable(ex1_19.out
  ExtremeC_examples_chapter1_19.c
)

add_executable(ex1_20.out
  ExtremeC_examples_chapter1_20.c
)

add_executable(ex1_21.out
  ExtremeC_examples_chapter1_21.c
)

add_executable(ex1_22.out
  ExtremeC_examples_chapter1_22.c
)

add_library(ex1_23 STATIC
  ExtremeC_examples_chapter1_23.c
)

add_executable(ex1_24.out
  ExtremeC_examples_chapter1_24.c
)
