set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex1_01.out
  ExtremeC_examples1_01.c
)

add_executable(ex1_02.out
  ExtremeC_examples1_02.c
)

add_executable(ex1_03.out
  ExtremeC_examples1_03.c
)

add_executable(ex1_04.out
  ExtremeC_examples1_04.c
)

add_executable(ex1_05.out
  ExtremeC_examples1_05.c
)

add_executable(ex1_06.out
  ExtremeC_examples1_06.c
)

add_executable(ex1_07.out
  ExtremeC_examples1_07.c
)

add_executable(ex1_09.out
  ExtremeC_examples1_09.c
)

add_executable(ex1_10.out
  ExtremeC_examples1_10.c
)

add_executable(ex1_11.out
  ExtremeC_examples1_11.c
)

add_executable(ex1_12.out
  ExtremeC_examples1_12.c
)

add_executable(ex1_14.out
  ExtremeC_examples1_14.c
)

add_executable(ex1_15.out
  ExtremeC_examples1_15.c
)

add_executable(ex1_16.out
  ExtremeC_examples1_16.c
)

add_executable(ex1_17.out
  ExtremeC_examples1_17.c
)

add_executable(ex1_18.out
  ExtremeC_examples1_18.c
)

add_executable(ex1_19.out
  ExtremeC_examples1_19.c
)

add_executable(ex1_20.out
  ExtremeC_examples1_20.c
)

add_executable(ex1_21.out
  ExtremeC_examples1_21.c
)

add_executable(ex1_22.out
  ExtremeC_examples1_22.c
)

add_library(ex1_23 STATIC
  ExtremeC_examples1_23.c
)

add_executable(ex1_24.out
  ExtremeC_examples1_24.c
)
