set(CMAKE_EXPORT_5OMPILE_COMMANDS ON)

add_executable(ex5_1.out
  ExtremeC_example5_1.c
)

add_executable(ex5_2.out
  ExtremeC_example5_2.c
)

add_executable(ex5_3.out
  ExtremeC_example5_3.c
)

add_executable(ex5_4.out
  ExtremeC_example5_4.c
)

add_executable(ex5_5.out
  ExtremeC_example5_5.c
)

add_executable(ex5_6.out
  ExtremeC_example5_6.c
)
